add comments on part of the pom file

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-hibernate.dialect=org.hibernate.dialect.OracleDialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 'x'
 jdbc_url=jdbc:mysql://localhost:3306/mybatis_demo
