comments on spring xml file

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,16 +2,20 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   	<display-name>mybatis-web</display-name>
   
+  	<!-- 定义SPRING监听器，加载spring  -->
   	<listener>
 		<description>spring listener</description>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
+	<!--  指定spring配置文件位置  -->
   	<context-param>
 		<param-name>contextConfigLocation</param-name>
+		<!-- 加载多个spring配置文件  -->
 		<param-value>classpath:spring.xml,classpath:spring-mybatis.xml</param-value>
   	</context-param>
 	
+	<!-- 过滤器将一个名字与一个实现javax.servlet.Filter接口的类相关联  -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -20,15 +24,21 @@
 			<param-value>UTF-8</param-value>
 		</init-param>
 	</filter>
+	
+	<!-- 一旦命名了一个过滤器，就要利用filter-mapping元素把它与一个或多个servlet或JSP页面相关联  -->
 	<filter-mapping>
 		<filter-name>encodingFilter</filter-name>
+		<!-- 关联所有url地址 -->
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
+	<!--  在向servlet或JSP页面制定初始化参数或定制URL -->
 	<servlet>
+		<!-- 关联中央servlet的DispatcherServlet -->
 		<description>spring mvc servlet</description>
 		<servlet-name>springmvc</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<!-- 初始化DispatcherServlet中的contextConfigLocation参数-->
 		<init-param>
 			<description>springmvc config</description>
 			<param-name>contextConfigLocation</param-name>
@@ -36,6 +46,8 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+	
+	<!-- 服务器一般为servlet提供一个缺省的URL：  -->
 	<servlet-mapping>
 		<servlet-name>springmvc</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
